[package]
name = "temperature_tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.27.2"
egui_plot = "0.27.2"
rusqlite = { version = "0.31.0", features = ["bundled"] }
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = { version = "1.0.203", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }